--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,10 +2,6 @@ body {
 	margin: 0;
 	font: 1em helvetica, arial, sans-serif;
 	background-color: black;
-	/* background-image: url('./../img/bg.jpeg'); */
+	background-image: url('./../img/bg.jpeg');
 }
 
-p {
-    font-size: 4em;
-    color: white;
-}
