--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,7 +1,7 @@
 body {
 	margin: 0;
 	font: 1em helvetica, arial, sans-serif;
-	background-color: black;
+	background-color: rgb(144, 206, 224);
 	/* background-image: url('./../img/bg.jpeg'); */
 }
 
